# VideoProcessor

./: .gitignore  README.md  processor.py  pyproject.toml
.github/workflows/: python-package.yml
videoprocessor/: data_types.py  processor.py
