[tool.poetry]
name = "videoprocessor"
version = "0.1.1"
description = "Tools to facilitate video processing tasks using FFmpeg"
authors = ["DJ Stomp <stompzone@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
